tests/ui/tag.stderr
error: no #[tag] given
 --> $DIR/tag.rs:7:5
  |
7 |     name: String,
  |     ^^^^^^^^^^^^

error: no #[tag] given
  --> $DIR/tag.rs:14:5
   |
14 |     name: String,
   |     ^^^^^^^^^^^^

error: more than one #[tag] given
  --> $DIR/tag.rs:19:5
   |
19 | /     #[tag = 0]
20 | |     #[tag = 1]
21 | |     name: String,
   | |________________^

error: more than one #[tag] given
  --> $DIR/tag.rs:26:5
   |
26 | /     #[tag = 0]
27 | |     #[tag = 1]
28 | |     age: u32,
   | |____________^

error: no #[tag] given
  --> $DIR/tag.rs:36:5
   |
36 |     Dog,
   |     ^^^

error: no #[tag] given
  --> $DIR/tag.rs:43:5
   |
43 |     Dog,
   |     ^^^

error: more than one #[tag] given
  --> $DIR/tag.rs:48:5
   |
48 | /     #[tag = 0]
49 | |     #[tag = 1]
50 | |     Cat,
   | |_______^

error: more than one #[tag] given
  --> $DIR/tag.rs:56:5
   |
56 | /     #[tag = 0]
57 | |     #[tag = 1]
58 | |     Cat,
   | |_______^
